adding jobs path to job routes
